Assert if DBClientCursor is NULL SERVER-1372